# tic_tac

./: pyproject.toml
django-auth/django_auth/: db.sqlite3
django-auth/django_auth/api_auth/: urls.py  views.py
django-auth/django_auth/backend/: settings.py  urls.py
django-auth/tests/: test_django_auth.py
django_auth/: db.sqlite3
django_auth/api_auth/: models.py  serializers.py  urls.py  views.py
django_auth/api_auth/migrations/: 0001_initial.py  0002_userdetails_updated_time_userdetails_username.py  0003_alter_userdetails_profile_pic.py  0004_rename_profile_pic_userdetails_profile_image.py
django_auth/backend/: settings.py  urls.py
tests/: test.py
